app/assets/stylesheets/pages/merge_requests.scss
/* ... */
// hide mr close link for inline diff comment form
.diff-file .close-mr-link,
.diff-file .reopen-mr-link {
  display: none;
}

#modal_merge_info .modal-dialog {
  .dark {
    margin-right: 40px;
  }

  .btn-clipboard {
    @extend .pull-right;

    margin-right: 20px;
    margin-top: 5px;
    position: absolute;
    right: 0;
  }
}

.mr-info-list {
  position: relative;
  margin: 10px 0 $gl-padding 12px;

  p {
    margin: 6px 0;
    position: relative;
    padding-left: 15px;

    &::before {
      content: '';
      position: absolute;
      border-top: 2px solid $border-color;
      height: 1px;
      top: 8px;
      width: 8px;
      left: 0;
    }

    &:last-child {
      margin-bottom: 0;

      &::before {
        top: 14px;
      }
    }
  }

  .legend {
    height: 100%;
    width: 2px;
    background: $border-color;
    position: absolute;
    top: -5px;
  }
}

.mr-info-list.mr-memory-usage {
  .legend {
    height: 65%;
    top: 0;

    @media (max-width: $screen-xs-max) {
      height: 20px;
    }
  }

  p {
    float: left;
    padding-left: 20px;

    &::before {
      top: 13px;
    }
  }

  .memory-graph-container {
    float: left;
    margin-left: 5px;
  }
}

.mr-source-target {
  background-color: $gray-light;
  border-radius: 3px 3px 0 0;
  border-bottom: 1px solid $border-color;
  padding: 0 $gl-padding;
  margin-bottom: 6px;
  line-height: 44px;

  .dropdown-toggle .fa {
    color: $gl-text-color;
  }
}

.panel-new-merge-request {
  .panel-heading {
    padding: 5px 10px;
    font-weight: 600;
    line-height: 25px;
  }

  .panel-body {
    padding: 10px 5px;
  }

  .panel-footer {
    padding: 0;

    .btn {
      min-width: auto;
    }
  }

  .commit {
    .commit-row-title {
      margin-bottom: 4px;
    }

    .item-title {
      @media (min-width: $screen-sm-min) {
        width: 45%;
      }
    }

    .avatar {
      left: 0;
      top: 2px;
    }
  }

  .btn-clipboard {
    margin-right: 5px;
    padding: 0;
    background: transparent;
  }

  .ci-status-link {
    margin-right: 5px;
  }
}

.merge-request-select {
  padding-left: 5px;
  padding-right: 5px;
  margin-bottom: 10px;

  &:last-child {
    margin-bottom: 0;
  }

  @media (min-width: $screen-xs-min) {
    float: left;
    width: 50%;
    margin-bottom: 0;
  }

  .dropdown-menu-toggle {
    width: 100%;
  }

  .dropdown-menu {
    left: 5px;
    right: 5px;
    width: auto;
  }
}

.issuable-form-select-holder {
  display: inline-block;
  width: 250px;

  .dropdown-menu-toggle {
    width: 100%;
  }
}

.target-branch-select-dropdown-container {
  position: relative;
}

.assign-to-me-link {
  padding-left: 12px;
  white-space: nowrap;
}

.table-holder {
  .ci-table {

    th {
      background-color: $white-light;
      color: $gl-text-color-secondary;
    }
  }
}

.merged-buttons {
  margin-top: 20px;

  .btn {
    float: left;

    &:not(:last-child) {
      margin-right: 10px;
    }
  }
}

.mr-version-controls {
  background: $gray-light;
  color: $gl-text-color;

  .mr-version-menus-container {
    display: -webkit-flex;
    display: flex;
    -webkit-align-items: center;
    align-items: center;
    padding: 16px;
  }

  .content-block {
    padding: $gl-padding-top $gl-padding;
  }

  .comments-disabled-notif {
    line-height: 28px;

    .btn {
      margin-left: 5px;
    }
  }

  .mr-version-dropdown,
  .mr-version-compare-dropdown {
    margin: 0 7px;
  }

  .dropdown-title {
    color: $gl-text-color;
  }

  .fa-info-circle {
    color: $orange-500;
    padding-right: 5px;
  }
}

.merge-request-tabs-holder {
  top: $header-height;
  z-index: 100;
  background-color: $white-light;
  border-bottom: 1px solid $border-color;

  @media(min-width: $screen-sm-min) {
    position: sticky;
    position: -webkit-sticky;
  }

  &.affix {
    left: 0;
    transition: right .15s;

    @media (max-width: $screen-xs-max) {
      right: 0;
    }

    .merge-request-tabs-container {
      padding-left: $gl-padding;
      padding-right: $gl-padding;
    }
  }

  .nav-links {
    border: 0;
  }
}

.merge-request-tabs {
  display: flex;
  margin-bottom: 0;
  padding: 0;
}

.limit-container-width {
  .merge-request-tabs-container {
    max-width: $limited-layout-width;
    margin-left: auto;
    margin-right: auto;
  }
}

.merge-request-tabs-container {
  display: flex;
  justify-content: space-between;

  @media (max-width: $screen-xs-max) {
    flex-direction: column-reverse;
  }
}

.limit-container-width:not(.container-limited) {
  .merge-request-tabs-holder:not(.affix) {
    .merge-request-tabs-container {
      max-width: $limited-layout-width - ($gl-padding * 2);
    }
  }
}

.mr-memory-usage {
  p.usage-info-loading,
  p.usage-info-unavailable,
  p.usage-info-failed {
    margin-bottom: 5px;
  }

  p.usage-info-loading .usage-info-load-spinner {
    margin-right: 10px;
    font-size: 16px;
  }

  @media (max-width: $screen-md-min) {
    .mr-info-list.mr-memory-usage .legend {
      height: 80%;
    }
  }
}

.mr-widget-code-quality {
  .padding-left {
    padding-left: $gl-padding;
  }

  .ci-status-icon {
    margin-right: 7px;
  }

  .code-quality-container {
    border-top: 1px solid $gray-darker;
    border-bottom: 1px solid $gray-darker;
    padding: $gl-padding-top;
    background-color: $gray-light;

    .mr-widget-code-quality-list {
      list-style: none;
      padding: 0 31px;
      margin: 0;

      li.green {
        color: $green-500;
      }

      li.red {
        color: $red-500;
      }
    }
  }
}

